Upgrading Spring Boot version with Openrewrite, in preparation for switch to Keycloak security